eval-api/kube/overlays/minio/patch-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: llm-eval-app
spec:
  template:
    spec:
      containers:
        - name: llm-eval-app
